[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI Toolkit"
version = "0.1.0"
authors = [
  {name = "Keaton Conrad" }
]
description = "A toolkit for AI projects"
readme = "README.md"
packages = ["ai_toolkit"]
license = {file = "LICENSE"}
requires-python = ">= 3.6"
keywords = ["ai", "machine learning", "deep learning", "data science"]
dependencies = [
    "pandas",
    "comet_ml",
    "scikit-learn",
    "tensorflow",
    "numpy"
]

