[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "0.1.0"
authors = [
  {name = "Keaton Conrad" }
]
description = "A toolkit for AI projects"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.6"
keywords = ["ai", "machine learning", "deep learning", "data science"]
dependencies = [
    "pandas",
    "comet_ml",
    "scikit-learn",
    "tensorflow",
    "numpy"
]

